[project]
name = "pyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "gabach"}
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
